<resources>
    <string name="app_name">Sales Buddy</string>
    <string name="tvVersion">Versão 1.01.50</string>
    <string name="txUser">Usuário</string>
    <string name="txPassword">Senha</string>
    <string name="btnLogin">LOGIN</string>
    <string name="btnSales">REGISTRAR VENDA</string>
    <string name="btnReprocess">REPROCESSAR</string>
    <string name="tvTitleRegister">REGISTRAR VENDA</string>
    <string name="txResumer">RESUMO VENDA</string>
    <string name="tvName">Nome</string>
    <string name="tvNameEx">José Maria das Neves</string>
    <string name="tvCpf">CPF</string>
    <string name="tvCpfEx">000.000.000-00</string>
    <string name="tvEmail">E-mail</string>
    <string name="tvEmailEx">josemariadasneves@gmail.com</string>
    <string name="tvValueReceived">Valor recebido</string>
    <string name="tvValueReceivedEx">R$ 57,00</string>
    <string name="tvValueSales">Valor venda</string>
    <string name="tvChange">Troco devido</string>
    <string name="Alter">ALTERAR</string>
    <string name="btnEnd">FINALIZAR</string>
    <string name="tvTitleProof">COMPROVANTE</string>
    <string name="tvProofQuestion">ENVIAR COMPROVANTE PARA CLIENTE?</string>
    <string name="btnYes">SIM</string>
    <string name="btnNo">NÃO</string>
    <string name="tvSaleId">Venda nº 012345</string>
    <string name="tvTitleReprocesing">REPROCESSAMENTO</string>
    <string name="btnReprossesing">REPROCESSAR</string>
    <string name="btnResitring">IR PARA RESUMO</string>
    <string name="tvnameUser">NOME CLIENTE</string>
</resources>